pointofsale/css/app.css
/*Pure CSS Button Colors*/
.pure-button-success,
.pure-button-error,
.pure-button-warning,
.pure-button-secondary {
    color: white;
    border-radius: 4px;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
}

.pure-button-success {
    background: rgb(28, 184, 65); /* this is a green */
}

.pure-button-error {
    background: rgb(202, 60, 60); /* this is a maroon */
}

.pure-button-warning {
    background: rgb(223, 117, 20); /* this is an orange */
}

.pure-button-secondary {
    background: rgb(66, 184, 221); /* this is a light blue */
}

/*Application Level Styling*/
body {
	padding: 0;
	margin: 0;
}
.app-wrap {
  min-width: 960px;   
}

.viewport-wrapper {
 float: left;
 width: 100%;
}

.viewport-main {
 margin: 0px 200px;
 height: 400px;
}

div.left.region {
 width: 200px;
 height: 400px;
 float: left;
 margin-left: -100%;    
}

div.right.region {
 width: 200px;
 height: 400px;
 float: left;
 margin-left: -200px;
}

div.header.region, div.footer.region {
     width: 100%;
     height: 100px;    
     float: left;
}

div.footer.region {
    clear: both;
}

div.modalOverlay {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	display: none;
	z-index: 100;
}

.login-form input[type="text"], .login-form input[type="password"] {
	width: 100%;
}

